# Gazetown

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.beads/: issues.jsonl  routes.jsonl
.github/workflows/: autofix_pr.yml  release.yml  release_nightly.yml  run_agent_evals.yml  run_bundling.yml  run_cron_unit_evals.yml  run_tests.yml  run_unit_evals.yml
crates/belvedere/: Cargo.toml
crates/belvedere/src/: belvedere.rs  main.rs  town.rs
crates/gastown/: Cargo.toml  README.md  TESTING.md
crates/gastown/src/: dashboard_buffer.rs  dashboard_buffer_tests.rs  gastown.rs  main.rs  town_item.rs
crates/gastown_git_test/: Cargo.toml  README.md
crates/gastown_git_test/src/: main.rs
crates/gazetown/: Cargo.toml
crates/gazetown/src/: app.rs  main.rs
crates/gazetown/src/views/: agent_panel.rs  convoy_status.rs  dashboard.rs  diff_viewer.rs  mod.rs
tooling/xtask/src/tasks/workflows/: autofix_pr.rs  extension_tests.rs  run_agent_evals.rs  run_tests.rs  runners.rs  steps.rs
