[package]
name = "belvedere"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
description = "Belvedere - Multi-agent development workspace"
authors = ["Gazetown Team"]

[lints]
workspace = true

[lib]
path = "src/belvedere.rs"

[[bin]]
name = "belvedere"
path = "src/main.rs"

[dependencies]
# From gazetown - core agent infrastructure
agent.workspace = true
agent_ui.workspace = true
agent_settings.workspace = true

# From both - common deps
anyhow.workspace = true
assets.workspace = true
collections.workspace = true
db.workspace = true
env_logger.workspace = true
futures.workspace = true

# From gazetown - git integration
git.workspace = true
git_ui.workspace = true

# From both - GPUI and UI
gpui.workspace = true
gpui_tokio.workspace = true
ui.workspace = true
theme.workspace = true
title_bar.workspace = true

# From gazetown - language support
language.workspace = true
languages = { workspace = true, features = ["load-grammars"] }

# From gazetown - logging and tracing
log.workspace = true
tracing.workspace = true
ztracing.workspace = true

# From gastown - additional UI
dirs.workspace = true

# From gazetown - workspace infrastructure
parking_lot.workspace = true
paths.workspace = true
project.workspace = true
proto.workspace = true
release_channel.workspace = true
settings.workspace = true

# From gazetown - serialization and telemetry
serde.workspace = true
serde_json.workspace = true
telemetry.workspace = true
telemetry_events.workspace = true
url.workspace = true
util.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
ashpd.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
